--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas: 
+    'header'
+    'main'
+    'footer';
+}
+
+.container {
+  max-width: 1235px;
+  margin: 0 auto;
 }
