--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --color-main-dark: #0067A3;
   --color-main-light: #0079BF;
   --color-light: #FFFFFF;
+  --color-dark: #000000;
   --color-theme1: #EBECF0;
   --color-theme2: #CBCBCB;
   --color-theme3: #5E6C84;
