--- a/src/components/header/userMenu/userMenu.module.css
+++ b/src/components/header/userMenu/userMenu.module.css
@@ -1,22 +1,23 @@
-.wrapper {
-  width: 64px;
-  height: 40px;
+.userMenu{
+    width: 64px;
+    height: 40px;
 }
 
-.arrow {
-  cursor: pointer;
+.arrow {  
   transition: all .5s;
 }
 
-.arrow:hover {
+.userMenu__wrapper:hover,
+.menu__item:hover {
   opacity: .8;
+  cursor: pointer;
 }
 
 .menu {
   position: relative;
   width: 134px;
   height: 60px;
-  padding: 5px;
+  padding: 8px;
   margin-top: 5px;
   margin-left: -70px;
   background: var(--color-light);
@@ -40,4 +41,13 @@
 @keyframes menu {
   0% {opacity: 0;}
   100% {opacity: 1;}
+}
+
+.menu__item {
+  padding-top: 4px;
+  height: 22px;
+
+  font-size: 14px;
+  line-height: 16px;
+  color: var(--color-dark);
 }
