--- a/src/components/main/columns/columns.module.css
+++ b/src/components/main/columns/columns.module.css
@@ -3,7 +3,7 @@
 }
 
 .column__item {
-  width: 282px;
+  width: 97%;
   background: var(--color-theme1);
   border-radius: 10px;
   padding: 12px 12px 7px 12px;
@@ -11,23 +11,49 @@
 
 .column__title,
 .task__title,
-.button {
+.button,
+.input,
+.select {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
 }
 
-.task {
+.task,
+.input,
+.select {
   margin: 7px 0;
   background: var(--color-light);
   border-radius: 3px;
   padding: 7px;
 }
 
-.button {
+.input,
+.select {
+  margin-top: 0px;
+  width: 100%;
   border: none;
+}
+
+.button {
+  border: 1px solid var(--color-theme1);
+  border-radius: 5px;
   color: var(--color-theme3);
+  background: var(--color-theme1);
   margin-top: 10px;
+  padding: 3px;
+}
+
+.buttonSubmit {
+  border: 1px solid var(--color-theme1);
+  color: var(--color-light);
+  background: var(--color-main-dark);
+  padding: 3px 15px;
+}
+
+.buttonSubmit:hover {
+  color: var(--color-dark);
+  background: var(--color-light);
 }
 
 .task,
@@ -37,6 +63,13 @@
 
 .button:hover,
 .task:hover {
-  opacity: .6;
   cursor: pointer;
+}
+
+.task:hover {
+  opacity: .6;
+}
+
+.button:hover {
+  background: var(--color-light);
 }
