--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -25,3 +25,26 @@
 .footer__info {
   width: 345px;
 }
+
+@media (max-width: 700px) {
+  .footer__wrapper {
+    flex-direction: column;
+  }
+  .footer__info {
+    width: auto;
+  }
+  .footer__wrapper {
+    padding: 5px 0;
+  }
+}
+
+@media (max-width: 550px) {
+  .footer {
+    height: 100px;
+    background: var(--color-main-light);
+  }
+  .footer__wrapper {
+    display: none;
+    font-size: 15px;
+  }
+}
